<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.software.alejo.petvet2.AddEditPet.AddEditPetFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/area_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_name" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name_hint"
                    android:inputType="textCapWords"
                    android:textAppearance="?android:textAppearanceMedium" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/area_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/area_name"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_age" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txt_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/age_hint"
                    android:inputType="numberDecimal"
                    android:textAppearance="?android:textAppearanceMedium" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spn_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:entries="@array/ages_mag"
                android:textAppearance="?android:textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/area_gender_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/area_age"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="58dp"
                android:text="Género"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/area_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/area_gender_tittle"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_gender" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbn_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/male"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/rbn_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/area_specie_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/area_gender"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="58dp"
                android:layout_marginTop="16dp"
                android:text="Especie"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/area_specie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/area_specie_tittle"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_specie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_specie" />

            <Spinner
                android:id="@+id/spn_specie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:entries="@array/species"
                android:textAppearance="?android:textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/area_phrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/area_specie"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_phrase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_phrase" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_phrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txt_phrase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phrase_hint"
                    android:inputType="textCapSentences"
                    android:singleLine="true"
                    android:textAppearance="?android:textAppearanceMedium" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/area_photo_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/area_phrase"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="58dp"
                android:layout_marginTop="16dp"
                android:text="Imagen"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/area_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/area_photo_tittle"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:src="@drawable/ic_camara" />

            <ImageView
                android:id="@+id/img_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="32dp"
                android:src="@drawable/ic_photo" />

            <Button
                android:id="@+id/btnPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginLeft="16dp"

                android:backgroundTint="@color/colorPrimary"
                android:text="Cambiar"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>